src/PJ/POCO/TEST/NEG/NCAST01.POC
/* test casting between pointers and function pointers */
#pragma poco echo "expect>Error code -427"

main()
{
char *pt = "This should bomb (cleanly) at runtime...";
int  (*fpt)(void);

fpt = (int (*)(void))pt;
(*fpt)();
puts("Oops, didn't bomb if we made it here.");
}

